--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <script src="khan.js"></script>
+    <script src="peramind.js"></script>
+    <script src="loop.js"></script>
+    <script src="Do While loop.js"></script>
+    <script src="for loop.js"></script>
+    <script src="while loop.js"></script>
 </body>
 </html>
